generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  RENTAL_STAFF
  STORE_MANAGER

  @@map("user_role")
}

enum RentalOrderStatus {
  PENDING_PAYMENT
  CONFIRMED
  PREPARING
  READY_FOR_PICKUP
  RENTING
  OVERDUE
  RETURNED
  INSPECTING
  SETTLEMENT_PENDING
  COMPLETED
  EXPIRED
  NO_SHOW
  FULFILLMENT_FAILED

  @@map("rental_order_status")
}

enum ReservationStatus {
  TEMPORARY_HOLD
  CONFIRMED
  ACTIVE
  EXPIRED
  RELEASED
  COMPLETED

  @@map("reservation_status")
}

enum RentalUnitStatus {
  AVAILABLE
  PREPARING
  RENTED
  RETURN_INSPECTION
  CLEANING
  MAINTENANCE
  DAMAGED
  RETIRED

  @@map("rental_unit_status")
}

enum BlockType {
  CLEANING
  MAINTENANCE
  REPAIR
  MANUAL_BLOCK

  @@map("block_type")
}

enum FeeApprovalStatus {
  PENDING
  APPROVED
  ADJUSTED
  REJECTED

  @@map("fee_approval_status")
}

enum PaymentPurpose {
  RENTAL
  DEPOSIT

  @@map("payment_purpose")
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED

  @@map("payment_status")
}

enum RefundType {
  DEPOSIT_RETURN
  RENTAL_REFUND

  @@map("refund_type")
}

enum RefundStatus {
  PENDING
  SUCCEEDED
  FAILED

  @@map("refund_status")
}

enum DepositCollectionMethod {
  PAYMENT_GATEWAY
  DIRECT

  @@map("deposit_collection_method")
}

model User {
  userId       String   @id @default(uuid()) @map("user_id") @db.Uuid
  fullName     String   @map("full_name") @db.VarChar(150)
  email        String   @unique @db.VarChar(255)
  phone        String?  @unique @db.VarChar(30)
  passwordHash String   @map("password_hash") @db.VarChar(255)
  nationalId   String?  @unique @map("national_id") @db.VarChar(20)
  role         UserRole
  isActive     Boolean  @default(true) @map("is_active")
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamp(6)

  rentalCart                     RentalCart?
  customerOrders                 RentalOrder[]              @relation("OrderCustomer")
  inspectionResults              InspectionResult[]         @relation("InspectionInspectedBy")
  feeApprovalDecisions           FeeApprovalRequest[]       @relation("FeeApprovalDecidedBy")
  orderStatusChanges             RentalOrderStatusHistory[] @relation("OrderStatusChangedBy")
  unitStatusChanges              RentalUnitStatusHistory[]  @relation("UnitStatusChangedBy")
  replacedReservations           Reservation[]              @relation("ReservationReplacedBy")
  createdRentalPolicies          RentalPolicy[]             @relation("RentalPolicyCreatedBy")
  additionalPaymentConfirmations RentalOrder[]              @relation("AdditionalPaymentConfirmedBy")

  @@map("users")
}

model Category {
  categoryId  String  @id @default(uuid()) @map("category_id") @db.Uuid
  name        String  @db.VarChar(150)
  description String? @db.Text
  isActive    Boolean @default(true) @map("is_active")

  garments Garment[]

  @@map("categories")
}

model Garment {
  garmentId     String  @id @default(uuid()) @map("garment_id") @db.Uuid
  categoryId    String  @map("category_id") @db.Uuid
  name          String  @db.VarChar(200)
  description   String? @db.Text
  color         String? @db.VarChar(100)
  imageUrls     String? @map("image_urls") @db.Text
  rentalPrice   Decimal @map("rental_price") @db.Decimal(12, 2)
  depositAmount Decimal @map("deposit_amount") @db.Decimal(12, 2)
  isActive      Boolean @default(true) @map("is_active")

  category         Category          @relation(fields: [categoryId], references: [categoryId])
  rentalUnits      RentalUnit[]
  rentalCartItems  RentalCartItem[]
  rentalOrderItems RentalOrderItem[]

  @@map("garments")
}

model RentalUnit {
  rentalUnitId String           @id @default(uuid()) @map("rental_unit_id") @db.Uuid
  garmentId    String           @map("garment_id") @db.Uuid
  assetCode    String           @unique @map("asset_code") @db.VarChar(100)
  size         String           @db.VarChar(50)
  condition    String?          @db.VarChar(100)
  status       RentalUnitStatus
  createdAt    DateTime         @default(now()) @map("created_at") @db.Timestamp(6)

  garment            Garment                   @relation(fields: [garmentId], references: [garmentId])
  availabilityBlocks AvailabilityBlock[]
  reservations       Reservation[]
  inspectionResults  InspectionResult[]
  statusHistory      RentalUnitStatusHistory[]

  @@map("rental_units")
}

model AvailabilityBlock {
  blockId      String    @id @default(uuid()) @map("block_id") @db.Uuid
  rentalUnitId String    @map("rental_unit_id") @db.Uuid
  type         BlockType
  startAt      DateTime  @map("start_at") @db.Timestamp(6)
  endAt        DateTime  @map("end_at") @db.Timestamp(6)
  reason       String    @db.Text
  status       String?   @db.VarChar(50)

  rentalUnit RentalUnit @relation(fields: [rentalUnitId], references: [rentalUnitId])

  @@map("availability_blocks")
}

model RentalPolicy {
  policyId          String    @id @default(uuid()) @map("policy_id") @db.Uuid
  version           String    @unique @db.VarChar(50)
  effectiveFrom     DateTime  @map("effective_from") @db.Timestamp(6)
  effectiveTo       DateTime? @map("effective_to") @db.Timestamp(6)
  holdDuration      Int       @map("hold_duration")
  approvalThreshold Decimal   @map("approval_threshold") @db.Decimal(12, 2)
  lateFeePolicy     Json?     @map("late_fee_policy")
  damageFeePolicy   String?   @map("damage_fee_policy") @db.Text
  createdBy         String?   @map("created_by") @db.Uuid
  createdAt         DateTime  @default(now()) @map("created_at") @db.Timestamp(6)

  rentalOrders RentalOrder[]
  creator      User?         @relation("RentalPolicyCreatedBy", fields: [createdBy], references: [userId])

  @@map("rental_policies")
}

model RentalCart {
  cartId        String    @id @default(uuid()) @map("cart_id") @db.Uuid
  customerId    String    @unique @map("customer_id") @db.Uuid
  rentalStartAt DateTime? @map("rental_start_at") @db.Timestamp(6)
  returnDueAt   DateTime? @map("return_due_at") @db.Timestamp(6)
  updatedAt     DateTime  @map("updated_at") @db.Timestamp(6)

  customer User             @relation(fields: [customerId], references: [userId])
  items    RentalCartItem[]

  @@map("rental_carts")
}

model RentalCartItem {
  cartItemId    String @id @default(uuid()) @map("cart_item_id") @db.Uuid
  cartId        String @map("cart_id") @db.Uuid
  garmentId     String @map("garment_id") @db.Uuid
  requestedSize String @map("requested_size") @db.VarChar(50)
  quantity      Int    @default(1)

  cart    RentalCart @relation(fields: [cartId], references: [cartId])
  garment Garment    @relation(fields: [garmentId], references: [garmentId])

  @@unique([cartId, garmentId, requestedSize])
  @@map("rental_cart_items")
}

model RentalOrder {
  orderId                      String                   @id @default(uuid()) @map("order_id") @db.Uuid
  customerId                   String                   @map("customer_id") @db.Uuid
  policyId                     String                   @map("policy_id") @db.Uuid
  rentalStartAt                DateTime                 @map("rental_start_at") @db.Timestamp(6)
  returnDueAt                  DateTime                 @map("return_due_at") @db.Timestamp(6)
  actualPickupAt               DateTime?                @map("actual_pickup_at") @db.Timestamp(6)
  actualReturnAt               DateTime?                @map("actual_return_at") @db.Timestamp(6)
  pickupInfo                   String?                  @map("pickup_info") @db.Text
  returnInfo                   String?                  @map("return_info") @db.Text
  status                       RentalOrderStatus
  rentalAmount                 Decimal                  @map("rental_amount") @db.Decimal(12, 2)
  depositAmount                Decimal                  @map("deposit_amount") @db.Decimal(12, 2)
  upfrontAmount                Decimal                  @map("upfront_amount") @db.Decimal(12, 2)
  additionalCharge             Decimal                  @default(0) @map("additional_charge") @db.Decimal(12, 2)
  depositRefundAmount          Decimal                  @default(0) @map("deposit_refund_amount") @db.Decimal(12, 2)
  collectedDepositAmount       Decimal                  @default(0) @map("collected_deposit_amount") @db.Decimal(12, 2)
  depositCollectionMethod      DepositCollectionMethod? @map("deposit_collection_method")
  depositCollectedAt           DateTime?                @map("deposit_collected_at") @db.Timestamp(6)
  additionalPayment            Decimal                  @default(0) @map("additional_payment") @db.Decimal(12, 2)
  additionalPaymentConfirmedAt DateTime?                @map("additional_payment_confirmed_at") @db.Timestamp(6)
  additionalPaymentConfirmedBy String?                  @map("additional_payment_confirmed_by") @db.Uuid
  finalCharge                  Decimal?                 @map("final_charge") @db.Decimal(12, 2)
  totalPaid                    Decimal                  @default(0) @map("total_paid") @db.Decimal(12, 2)
  totalRefunded                Decimal                  @default(0) @map("total_refunded") @db.Decimal(12, 2)
  netCollected                 Decimal                  @default(0) @map("net_collected") @db.Decimal(12, 2)
  createdAt                    DateTime                 @default(now()) @map("created_at") @db.Timestamp(6)

  customer                   User                       @relation("OrderCustomer", fields: [customerId], references: [userId])
  policy                     RentalPolicy               @relation(fields: [policyId], references: [policyId])
  items                      RentalOrderItem[]
  feeApprovalRequests        FeeApprovalRequest[]
  payments                   Payment[]
  refunds                    Refund[]
  statusHistory              RentalOrderStatusHistory[]
  additionalPaymentConfirmer User?                      @relation("AdditionalPaymentConfirmedBy", fields: [additionalPaymentConfirmedBy], references: [userId], onDelete: SetNull)

  @@map("rental_orders")
}

model RentalOrderItem {
  orderItemId   String @id @default(uuid()) @map("order_item_id") @db.Uuid
  orderId       String @map("order_id") @db.Uuid
  garmentId     String @map("garment_id") @db.Uuid
  requestedSize String @map("requested_size") @db.VarChar(50)

  order            RentalOrder       @relation(fields: [orderId], references: [orderId])
  garment          Garment           @relation(fields: [garmentId], references: [garmentId])
  reservations     Reservation[]
  inspectionResult InspectionResult?

  @@map("rental_order_items")
}

model Reservation {
  reservationId        String            @id @default(uuid()) @map("reservation_id") @db.Uuid
  rentalOrderItemId    String            @map("rental_order_item_id") @db.Uuid
  rentalUnitId         String            @map("rental_unit_id") @db.Uuid
  status               ReservationStatus
  blockedStartAt       DateTime          @map("blocked_start_at") @db.Timestamp(6)
  blockedEndAt         DateTime          @map("blocked_end_at") @db.Timestamp(6)
  holdExpiresAt        DateTime?         @map("hold_expires_at") @db.Timestamp(6)
  preparationCondition String?           @map("preparation_condition") @db.VarChar(100)
  preparationNotes     String?           @map("preparation_notes") @db.Text
  preparationImages    String?           @map("preparation_images") @db.Text
  preparedAt           DateTime?         @map("prepared_at") @db.Timestamp(6)
  replacementReason    String?           @map("replacement_reason") @db.Text
  replacedBy           String?           @map("replaced_by") @db.Uuid
  replacedAt           DateTime?         @map("replaced_at") @db.Timestamp(6)
  createdAt            DateTime          @default(now()) @map("created_at") @db.Timestamp(6)

  rentalOrderItem RentalOrderItem @relation(fields: [rentalOrderItemId], references: [orderItemId])
  rentalUnit      RentalUnit      @relation(fields: [rentalUnitId], references: [rentalUnitId])
  replacer        User?           @relation("ReservationReplacedBy", fields: [replacedBy], references: [userId])

  @@map("reservations")
}

model InspectionResult {
  inspectionResultId String   @id @default(uuid()) @map("inspection_result_id") @db.Uuid
  rentalOrderItemId  String   @unique @map("rental_order_item_id") @db.Uuid
  rentalUnitId       String   @map("rental_unit_id") @db.Uuid
  inspectedBy        String   @map("inspected_by") @db.Uuid
  condition          String   @db.VarChar(100)
  accessoriesStatus  String?  @map("accessories_status") @db.VarChar(100)
  issueType          String?  @map("issue_type") @db.VarChar(100)
  description        String?  @db.Text
  evidenceUrls       String?  @map("evidence_urls") @db.Text
  proposedCharge     Decimal  @default(0) @map("proposed_charge") @db.Decimal(12, 2)
  inspectedAt        DateTime @map("inspected_at") @db.Timestamp(6)

  rentalOrderItem RentalOrderItem @relation(fields: [rentalOrderItemId], references: [orderItemId])
  rentalUnit      RentalUnit      @relation(fields: [rentalUnitId], references: [rentalUnitId])
  inspector       User            @relation("InspectionInspectedBy", fields: [inspectedBy], references: [userId])

  @@map("inspection_results")
}

model FeeApprovalRequest {
  feeApprovalRequestId String            @id @default(uuid()) @map("fee_approval_request_id") @db.Uuid
  rentalOrderId        String            @map("rental_order_id") @db.Uuid
  proposedAmount       Decimal           @map("proposed_amount") @db.Decimal(12, 2)
  finalAmount          Decimal?          @map("final_amount") @db.Decimal(12, 2)
  status               FeeApprovalStatus
  decisionReason       String?           @map("decision_reason") @db.Text
  decidedBy            String?           @map("decided_by") @db.Uuid
  decidedAt            DateTime?         @map("decided_at") @db.Timestamp(6)
  createdAt            DateTime          @default(now()) @map("created_at") @db.Timestamp(6)

  rentalOrder RentalOrder @relation(fields: [rentalOrderId], references: [orderId])
  decider     User?       @relation("FeeApprovalDecidedBy", fields: [decidedBy], references: [userId])

  @@map("fee_approval_requests")
}

model Payment {
  paymentId      String         @id @default(uuid()) @map("payment_id") @db.Uuid
  rentalOrderId  String         @map("rental_order_id") @db.Uuid
  purpose        PaymentPurpose
  amount         Decimal        @db.Decimal(12, 2)
  status         PaymentStatus
  transactionRef String?        @unique @map("transaction_ref") @db.VarChar(255)
  createdAt      DateTime       @default(now()) @map("created_at") @db.Timestamp(6)
  paidAt         DateTime?      @map("paid_at") @db.Timestamp(6)

  rentalOrder RentalOrder @relation(fields: [rentalOrderId], references: [orderId])
  refunds     Refund[]

  @@map("payments")
}

model Refund {
  refundId       String       @id @default(uuid()) @map("refund_id") @db.Uuid
  rentalOrderId  String       @map("rental_order_id") @db.Uuid
  paymentId      String?      @map("payment_id") @db.Uuid
  type           RefundType
  amount         Decimal      @db.Decimal(12, 2)
  reason         String?      @db.Text
  status         RefundStatus
  transactionRef String?      @unique @map("transaction_ref") @db.VarChar(255)
  createdAt      DateTime     @default(now()) @map("created_at") @db.Timestamp(6)
  completedAt    DateTime?    @map("completed_at") @db.Timestamp(6)

  rentalOrder RentalOrder @relation(fields: [rentalOrderId], references: [orderId])
  payment     Payment?    @relation(fields: [paymentId], references: [paymentId])

  @@map("refunds")
}

model RentalOrderStatusHistory {
  historyId     String             @id @default(uuid()) @map("history_id") @db.Uuid
  rentalOrderId String             @map("rental_order_id") @db.Uuid
  oldStatus     RentalOrderStatus? @map("old_status")
  newStatus     RentalOrderStatus  @map("new_status")
  changedBy     String?            @map("changed_by") @db.Uuid
  changedAt     DateTime           @map("changed_at") @db.Timestamp(6)
  reason        String?            @db.Text

  rentalOrder   RentalOrder @relation(fields: [rentalOrderId], references: [orderId])
  changedByUser User?       @relation("OrderStatusChangedBy", fields: [changedBy], references: [userId])

  @@map("rental_order_status_history")
}

model RentalUnitStatusHistory {
  historyId    String            @id @default(uuid()) @map("history_id") @db.Uuid
  rentalUnitId String            @map("rental_unit_id") @db.Uuid
  oldStatus    RentalUnitStatus? @map("old_status")
  newStatus    RentalUnitStatus  @map("new_status")
  changedBy    String?           @map("changed_by") @db.Uuid
  changedAt    DateTime          @map("changed_at") @db.Timestamp(6)
  reason       String?           @db.Text

  rentalUnit    RentalUnit @relation(fields: [rentalUnitId], references: [rentalUnitId])
  changedByUser User?      @relation("UnitStatusChangedBy", fields: [changedBy], references: [userId])

  @@map("rental_unit_status_history")
}
